@@ -1,4 +1,5 @@
 MAINTAINERCLEANFILES = Makefile.in
 noinst_LTLIBRARIES = libraw1394util.la
 libraw1394util_la_SOURCES = raw1394util.c raw1394util.h
+INCLUDES = @LIBRAW1394_CFLAGS@
  
